[package]
name = "erlang-distribution-dynamic-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
colored = "2.1.0"
deku = { version = "0.18.1", default-features = false, features = ["std"] }
dirs = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.31"
hostname = "0.4.0"
hyper = "1.5.0"
hyper-openssl = "0.10.2"
hyper-util = "0.1.10"
k8s-openapi = { version = "0.23.0", default-features = false, features = [
    "latest",
] }
kube = { version = "0.96.0", features = [
    "client",
    "config",
    "rustls-tls",
    "ws",
    "openssl-tls",
] }
log = "0.4.22"
md5 = "0.7.0"
openssl = "0.10.68"
rand = "0.8.5"
secrecy = "0.10.3"
serde = { version = "1.0.214", features = ["derive"] }
tempfile = "3.13.0"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["tokio", "util"] }
tracing = "0.1.40"
k8s_util = { path = "../k8s_util" }
