[package]
name = "k8s_util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
dirs = "5.0.1"
futures = "0.3.31"
hickory-resolver = { version = "0.25.0-alpha.4", features = ["tokio"] }
hickory-client = { version = "0.25.0-alpha.4" }
hyper = "1.5.0"
hyper-openssl = "0.10.2"
hyper-util = "0.1.10"
k8s-openapi = { version = "0.23.0", default-features = false, features = [
    "latest",
] }
kube = { version = "0.96.0", features = [
    "client",
    "config",
    "rustls-tls",
    "ws",
    "openssl-tls",
] }
log = "0.4.22"
openssl = "0.10.68"
secrecy = "0.10.3"
serde = { version = "1.0.214", features = ["derive"] }
socks5-proto = "0.4.1"
tempfile = "3.13.0"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["tokio", "util"] }
tracing = "0.1.40"
lru = "0.12.5"
