[package]
name = "kafka_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui_infinite_scroll = "0.5.0"
egui_virtual_list = "0.5.0"
env_logger = "0.11.5"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
log = "0.4.22"
#kafka = "0.10.0"
openssl = "0.10.66"
#rskafka = { git = "https://github.com/influxdata/rskafka.git", features = ["full"] }
rskafka = { path = "../../rskafka", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
    "tls12",
] }
tokio = { version = "1.40.0", features = ["full"] }
k8s_util = { path = "../k8s_util" }
egui_tiles = "0.10.1"
ractor = "0.13.5"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
regex = "1.11.1"
mlua = { version = "0.10.2", features = [
    "anyhow",
    "async",
    "lua54",
    "send",
    "serialize",
    "vendored",
] }
anyhow = "1.0.94"
protobuf-parse = "3.7.1"
protobuf = "3.7.1"
protobuf-json-mapping = "3.7.1"
serde_json = "1.0.133"
egui_json_tree = "0.8.0"
parking_lot = "0.12.3"
lru = "0.12.5"
pin-project = "1.1.7"
roaring = "0.10.9"
